[package]
name = "bcrypt-wasm"
version = "0.6.3"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Easily hash and verify passwords using bcrypt"
homepage = "https://github.com/ATechnoHazard/rust-bcrypt"
repository = "https://github.com/ATechnoHazard/rust-bcrypt"
keywords = ["bcrypt", "password", "web", "hash"]
edition = "2018"

[dependencies]
blowfish = { version = "0.4", features = ["bcrypt"] }
rand = { version = "0.7" }
getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
lazy_static = "1"
base64 = "0.11"
byteorder = "1"

[dev-dependencies]
quickcheck = "0.9.0"

[badges]
maintenance = { status = "passively-maintained" }
